# SQLModel

./: README.md
SQLModelDay1/: README.md  pyproject.toml
SQLModelDay1/sqlmodelday1/: connection_string.py  create_records.py  engines.py  main.py  models.py
SQLmodelDay2/: .env  README.md  pyproject.toml
SQLmodelDay2/sqlmodelday2/: create_records.py  engines.py  main.py  models.py  select_products.py
